--- a/step1/index.html
+++ b/step1/index.html
@@ -41,3 +41,10 @@
     </main>
 </body>
 </html>
+
+<!-- 
+    git add .
+    git commit -m 'add background image'
+    git push -u origin HEAD
+
+-->
